# verdict

./: .gitignore  README.md  devenv.nix  devenv.yaml
.github/workflows/: verdict-backend.yaml
docs/: architecture-design-document.md
docs/decisions/: 19-result-type-error-handling-pattern.md
docs/patterns/: backend.md
docs/sprint-planning/sprint-0/: 13-set-up-github-actions-ci-for-verdict-backend.md
docs/sprint-planning/sprint-1/: 1-set-up-test-infrastructure-and-database-fixtures.md  10-implement-standard-model.md  11-implement-statement-model.md  12-implement-oscal-mock-source-and-ingestion.md  19-research-result-type-error-handling-pattern.md  2-implement-base-model-mixins-and-gold-source-id-pattern.md  20-implement-result-type-and-port-gold-source-query.md  21-implement-result-type-and-port-gold-source-query.md  23-fix-mixin-type-safety-and-column-reuse-bug.md  27-split-settings-into-database-and-operational-subsets.md  3-implement-asset-model-mock-source-and-ingestion.md  4-implement-system-model-mock-source-and-ingestion.md  5-implement-user-role-and-permission-models.md  6-implement-audit-log-model.md  7-implement-api-key-authentication-and-rbac-middleware.md  8-research-oscal-pydantic-library-evaluation.md  9-implement-policy-model.md  overview.md
mock-services/: devenv.nix  devenv.yaml  justfile  pyproject.toml
mock-services/asset_inventory/: app.py  models.py
mock-services/asset_inventory/data/: assets.yaml
shared/: devenv.nix
verdict-backend/: alembic.ini  devenv.nix  devenv.yaml  justfile  pyproject.toml
verdict-backend/.zed/: settings.json  tasks.json
verdict-backend/alembic/: env.py
verdict-backend/alembic/versions/: 6b960c32fa67_create_asset_table.py
verdict-backend/app/: config.py  db.py  deps.py  errors.py  main.py  queries.py  result.py
verdict-backend/app/models/: __init__.py  asset.py  base.py  base_model.py  gold_source.py  tags.py  timestamp.py
verdict-backend/app/routes/: assets.py
verdict-backend/app/schemas/: asset.py  base.py
verdict-backend/app/services/: asset_ingestion.py
verdict-backend/tests/: conftest.py  test_result.py  test_smoke.py
verdict-backend/tests/e2e/: conftest.py  test_asset_ingestion.py
verdict-backend/tests/factories/: __init__.py  asset.py
verdict-backend/tests/models/: conftest.py  mixin_test_model.py  test_gold_source.py  test_tags.py  test_timestamp.py
verdict-backend/tests/routes/: test_assets.py
verdict-backend/tests/services/: test_asset_ingestion.py
